--- a/src/components/layout/navbar/Navbar.css
+++ b/src/components/layout/navbar/Navbar.css
@@ -7,6 +7,7 @@
   margin: 0;
   padding: 0;
   box-shadow: 0px 6px 10px 1px rgba(0, 0, 0, 0.75);
+  z-index: 1;
 }
 
 .logo {
@@ -19,6 +20,7 @@
 .nav-list {
   display: flex;
   list-style: none;
+  font-family: Arial, Helvetica, sans-serif;
   padding: 0;
   margin: 15px 30px 15px auto;
   color: #f5f5f5;
@@ -36,12 +38,12 @@
 }
 
 .signup {
-  border: 2px solid whitesmoke;
+  border: 2px solid #f5f5f5;
   padding: 2px 5px 2px 5px;
 }
 
 .signup:hover {
-  /* background-color: #05413e; */
+  background-color: #05413e;
   border: 2px solid #20b2aa;
   color: #20b2aa;
 }
