--- a/src/components/layout/footer/Footer.css
+++ b/src/components/layout/footer/Footer.css
@@ -1,18 +1,4 @@
-.footer {
-  background-color: #1f2325;
-  height: 60vh;
+.grid-container {
+  background-color: #feddd4;
   width: 100%;
-}
-
-.container-grid {
-  overflow: hidden;
-  padding-left: 30px;
-}
-
-.list {
-  color: #f5f5f5;
-}
-
-.list-item:hover {
-  color: #20b2aa;
 }
