--- a/src/components/home/Introduction.css
+++ b/src/components/home/Introduction.css
@@ -1,8 +1,8 @@
 .introduction {
   text-align: center;
-  width: 50%;
+  width: 60%;
   height: 30vh;
-  margin: 25px auto;
+  margin: 0 auto 25px auto;
   padding: 20px;
 }
 
@@ -14,7 +14,7 @@
 
 .learn {
   height: 60vh;
-  width: 60%;
+  width: 65%;
   margin: 0;
 }
 
