--- a/src/components/layout/footer/Footer.css
+++ b/src/components/layout/footer/Footer.css
@@ -1,4 +1,31 @@
 .grid-container {
   background-color: #feddd4;
-  width: 100%;
+  width: 100vw;
+}
+
+.links {
+  list-style: none;
+  margin: 0;
+}
+
+.link {
+  margin: 10px 45px;
+}
+
+.icons {
+  display: flex;
+  list-style: none;
+}
+
+.icon {
+  margin: 2px 5px;
+}
+
+.address {
+  margin: 0;
+}
+
+.contact {
+  margin: 0;
+  color: blueviolet;
 }
