--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
   background-color: #f8f8ff;
 }
 
+.link-item {
+  text-decoration: none;
+}
+
 .londrina {
   font-family: "Londrina Solid", cursive;
 }
@@ -23,4 +27,30 @@
   font-size: 0.9rem;
   color: #706779;
   margin: 20px;
+}
+
+.orange-btn {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: #f29000;
+  color: #f8f8ff;
+  font-weight: bold;
+  font-family: "Titillium Web", sans-serif;
+  text-align: center;
+  height: 40px;
+  width: 100px;
+  margin: 0 auto;
+  border-radius: 20px;
+}
+
+.orange-btn:hover {
+  background-color: #f8f8ff;
+  color: #4a40b1;
+  border: 2px solid #f29000;
+}
+
+.input {
+  margin: 10px;
+  border: 1px solid #706779;
 }
