--- a/src/components/home/Reason.css
+++ b/src/components/home/Reason.css
@@ -1,13 +1,15 @@
 .reason-block {
   display: inline-flex;
-  padding: 20px;
+  flex-direction: row;
+  justify-content: center;
+  padding: 40px;
 }
 
 .image-teacher {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 100vh;
+  width: 50vw;
 }
 
 .teacher {
@@ -21,4 +23,12 @@
   justify-content: center;
   text-align: center;
   width: 40vw;
+}
+
+#big-orange-btn {
+  height: 60px;
+  width: 200px;
+  font-size: 20px;
+  margin-bottom: 40px;
+  border-radius: 30px;
 }
