--- a/client/src/components/layout/footer/Footer.css
+++ b/client/src/components/layout/footer/Footer.css
@@ -49,3 +49,25 @@
 .contact-icon {
   margin: 0 0 10px 10px;
 }
+
+.auth-footer {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 4%;
+  height: 100vh;
+  background-color: #cacad6;
+  border: 1px solid #6c66af;
+}
+
+.list-item-icon {
+  position: relative;
+  list-style: none;
+  width: 30px;
+  height: 50px;
+  font-size: larger;
+}
+
+.icon-item {
+  margin: 0 auto;
+}
