--- a/client/src/components/layout/navbar/Navbar.css
+++ b/client/src/components/layout/navbar/Navbar.css
@@ -109,3 +109,21 @@
   margin-top: 10px;
   transform: translateX(-12px);
 }
+
+.nav-icon-list {
+  position: relative;
+  width: 100%;
+  height: 30px;
+  display: flex;
+  background-color: red;
+}
+
+.icon-list-item {
+  list-style: none;
+  background-color: darkturquoise;
+  font-size: larger;
+}
+
+.nav-icon {
+  margin: 0 12px;
+}
