--- a/client/src/App.css
+++ b/client/src/App.css
@@ -60,8 +60,9 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  justify-content: center;
   top: 70px;
   left: 16%;
-  background-color: darkviolet;
   width: 84%;
+  background-color: rgb(223, 223, 223);
 }
