--- a/client/src/App.css
+++ b/client/src/App.css
@@ -64,5 +64,19 @@
   top: 70px;
   left: 16%;
   width: 84%;
-  background-color: rgb(223, 223, 223);
+  padding-top: 30px;
+}
+
+.add-btn-link {
+  position: sticky;
+  top: 15px;
+  width: 100%;
+  z-index: 1;
+  float: right;
+  padding-right: 10px;
+}
+
+.add-btn {
+  position: relative;
+  float: right;
 }
