--- a/client/src/components/layout/navbar/Navbar.css
+++ b/client/src/components/layout/navbar/Navbar.css
@@ -24,14 +24,14 @@
 }
 
 .guest-link-item {
-  color: #4a40b1; 
-  font-family: 'Varela Round', sans-serif;
+  color: #4a40b1;
+  font-family: "Varela Round", sans-serif;
   margin: auto 5px;
   padding: 5px;
 }
 
 .guest-link-item:hover {
-  color: #4a40b1; 
+  color: #4a40b1;
   text-decoration: none;
   font-weight: bolder;
 }
@@ -41,11 +41,11 @@
   border-radius: 20px;
 }
 
-.signup:hover{
+.signup:hover {
   border: 2px solid #4a40b1;
 }
 
-.auth-nav{
+.auth-nav {
   top: 0;
   left: 0;
   position: fixed;
@@ -64,28 +64,28 @@
   margin: 5px auto;
 }
 
-.user{
+.user {
   color: darkslategray;
   font-weight: 500;
   margin: 10px 0;
 }
 
-.center{
+.center {
   display: flex;
   flex-direction: row;
   justify-content: center;
 }
 
-.transparent{
+.transparent {
   background-color: transparent;
 }
 
-.auth-nav-links{
+.auth-nav-links {
   margin: 30px auto;
   padding-left: 50px;
 }
 
-.auth-link-item{
+.auth-link-item {
   list-style: none;
   color: #4a40b1;
 }
@@ -115,15 +115,18 @@
   width: 100%;
   height: 30px;
   display: flex;
-  background-color: red;
+  background: transparent;
+  margin-top: 170px;
+  transform: translate(-10%);
 }
 
 .icon-list-item {
   list-style: none;
-  background-color: darkturquoise;
-  font-size: larger;
+  font-size: medium;
+  background-color: transparent;
 }
 
 .nav-icon {
   margin: 0 12px;
+  background: transparent;
 }
