--- a/client/src/components/courses/CourseCard.css
+++ b/client/src/components/courses/CourseCard.css
@@ -6,8 +6,14 @@
   box-shadow: 6px 7px 16px 0px rgba(134, 133, 133, 0.75);
 }
 
+.link-btn {
+  position: relative;
+  width: 100%;
+}
+
 .buttons {
-  margin: 5px;
+  margin-top: 5px;
+  width: 100%;
 }
 
 .card-image {
