--- a/client/src/components/layout/navbar/Navbar.css
+++ b/client/src/components/layout/navbar/Navbar.css
@@ -116,13 +116,13 @@ ul {
 }
 
 .nav-icon-list {
+  left: 15px;
   position: relative;
   width: 100%;
   height: 30px;
   display: flex;
   background: transparent;
   margin-top: 170px;
-  transform: translate(-10%);
 }
 
 .icon-list-item {
