--- a/client/src/components/home/Home.css
+++ b/client/src/components/home/Home.css
@@ -46,3 +46,9 @@
   background: transparent;
   margin-top: 20px;
 }
+
+@media only screen and (max-width: 768px) {
+  .home-box {
+    height: auto;
+  }
+}
