--- a/client/src/components/home/Home.css
+++ b/client/src/components/home/Home.css
@@ -47,7 +47,14 @@
   margin-top: 20px;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 1200px) and (min-width: 600px) {
+  .home-box {
+    height: auto;
+    margin: 134px auto;
+  }
+}
+
+@media only screen and (max-width: 600px) {
   .home-box {
     height: auto;
   }
