--- a/client/src/components/layout/footer/Footer.css
+++ b/client/src/components/layout/footer/Footer.css
@@ -42,6 +42,20 @@
   margin: 10px 0 2px 10px;
 }
 
+.input {
+  width: 80%;
+}
+
+.send {
+  background-color: #706779;
+  color: #f8f8ff;
+}
+
+.send:hover {
+  background-color: #f8f8ff;
+  color: #706779;
+}
+
 #details {
   margin: 20px 0;
 }
