--- a/client/src/components/courses/CourseCard.css
+++ b/client/src/components/courses/CourseCard.css
@@ -35,3 +35,10 @@
   height: 40%;
   padding: 5px;
 }
+
+@media only screen and (max-width: 600px) {
+  .course-card {
+    width: 80%;
+    margin: 20px 0;
+  }
+}
