--- a/client/src/components/layout/headers/Header.css
+++ b/client/src/components/layout/headers/Header.css
@@ -1,14 +1,21 @@
 .header {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    color: #f8f8ff;
-    background-color: #4a40b1;
-    top: 0;
-    left: 16%;
-    position: fixed;
-    padding-left: 20px;
-    height: 70px;
-    width: 84%;
-    z-index: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  color: #f8f8ff;
+  background-color: #4a40b1;
+  top: 0;
+  left: 16%;
+  position: fixed;
+  padding-left: 20px;
+  height: 70px;
+  width: 84%;
+  z-index: 1;
+}
+
+@media only screen and (max-width: 600px) {
+  .header {
+    width: 100%;
+    left: 0;
+  }
 }
