--- a/client/src/App.css
+++ b/client/src/App.css
@@ -151,6 +151,13 @@
   padding: 30px 100px;
 }
 
+@media only screen and (max-width: 1200px) and (min-width: 600px) {
+  .auth-box {
+    left: 18%;
+    width: 82%;
+  }
+}
+
 @media only screen and (max-width: 600px) {
   *,
   *::before,
