--- a/client/src/components/layout/headers/Header.css
+++ b/client/src/components/layout/headers/Header.css
@@ -13,10 +13,22 @@
   z-index: 1;
 }
 
+@media only screen and (max-width: 1200px) and (min-width: 600px) {
+  .header {
+    left: 18%;
+  }
+}
+
 @media only screen and (max-width: 600px) {
   .header {
     width: 100%;
     left: 0;
-    font-size: 30px;
+    font-size: 25px;
+  }
+}
+
+@media only screen and (max-width: 300px) {
+  .header {
+    font-size: 20px;
   }
 }
