--- a/client/src/components/layout/navbar/Navbar.css
+++ b/client/src/components/layout/navbar/Navbar.css
@@ -181,6 +181,17 @@ ul {
   }
 
   .auth-nav {
-    display: none;
+    top: 70px;
+    width: 100%;
+    z-index: 2;
+    text-align: center;
+  }
+
+  .auth-nav-links {
+    padding-left: 0;
+  }
+
+  .nav-icon-list {
+    left: 30%;
   }
 }
