--- a/client/src/components/content/CourseContent.css
+++ b/client/src/components/content/CourseContent.css
@@ -6,7 +6,7 @@
   position: relative;
   height: 50vh;
   width: 100%;
-  background-color: turquoise;
+  background-color: #9a9ec9;
 }
 
 .content-description {
