--- a/client/src/components/courses/CourseCard.css
+++ b/client/src/components/courses/CourseCard.css
@@ -18,7 +18,7 @@
 
 .card-image {
   position: relative;
-  background-color: yellow;
+  background-color: #9a9ec9;
   height: 30%;
   width: 100;
   margin-bottom: 5px;
