--- a/client/src/components/courses/CourseCard.css
+++ b/client/src/components/courses/CourseCard.css
@@ -1,8 +1,9 @@
 .course-card {
+  padding-bottom: 10px;
   padding-top: 10px;
   margin: 30px;
   width: 100px;
-  height: 500px;
+  height: 550px;
   box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.4);
 }
 
