--- a/client/src/components/courses/CourseCard.css
+++ b/client/src/components/courses/CourseCard.css
@@ -17,6 +17,11 @@
   width: 100%;
 }
 
+.btns {
+  position: relative;
+  bottom: 10px;
+}
+
 .card-image {
   position: relative;
   background-color: #9a9ec9;
